making search view

--- a/src/app/search/search-options/search-options.component.html
+++ b/src/app/search/search-options/search-options.component.html
@@ -1,1 +1,6 @@
-<p>search-options works!</p>
+<mat-radio-group aria-label="Select an option">
+  <mat-radio-button value="1">Linear search</mat-radio-button>
+  <mat-radio-button disabled="true" value="2">Session based inverted index</mat-radio-button>
+  <mat-radio-button disabled="true" value="3">Persistent inverted index</mat-radio-button>
+  <mat-radio-button disabled="true" value="3">NLP similarity search</mat-radio-button>
+</mat-radio-group>
