--- a/src/app/search/search-bar/search-bar.component.html
+++ b/src/app/search/search-bar/search-bar.component.html
@@ -1,1 +1,6 @@
-<p>search-bar works!</p>
+<form>
+  <mat-form-field appearance="outline">
+    <mat-label>Input</mat-label>
+    <input matInput>
+  </mat-form-field>
+</form>
